fix drag/drop error fix column spacing

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,7 +19,7 @@ body {
 
 $headerHeight: 55px;
 $sidebarWidth: 16vw;
-$playlistWidth: 25vw;
+$playlistWidth: 28vw;
 
 .sidebar {
   position: fixed;
@@ -57,6 +57,7 @@ $playlistWidth: 25vw;
   width:0;
   left:0; 
   padding: 1em;
+  padding-right: 2em;
   border-right:  1px solid #000;
   &.active {
     display:block;
